Texture Region example added

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,8 @@ bin_PROGRAMS = \
                 point_sprites \
                 blur \
                 color_saturation \
-                compositor
+                compositor \
+                textureregion
 
 triangles_SOURCES = triangles.cpp
 lighting_SOURCES = lighting.cpp
@@ -23,6 +24,7 @@ point_sprites_SOURCES = point_sprites.cpp
 blur_SOURCES = blur.cpp
 color_saturation_SOURCES = color_saturation.cpp
 compositor_SOURCES = compositor.cpp
+textureregion_SOURCES = textureregion.cpp
 
 INCLUDES = -Icommon
 LIBS = -lGL -lglut
